# sre-web-inspector

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  run_cninfo.py  run_lizhi.py  usage.md
config/: cninfo.yaml  example.yaml  lizhi.yaml
examples/: basic_context.py  custom_middleware.py  full_inspection.py  hooks_lifecycle.py  login_flow.py  middleware_route_patch.py  page_generation.py  page_scoped_middlewares.py  request_replay.py
skill/: SKILL.md
src/datamarket/: __init__.py  cninfo_collector.py  lizhi_inspector.py
src/sre_web_inspector/: __init__.py  api_capture.py  base_collector.py  browser_context.py  config_schema.py  hooks.py  inspector.py  page_generator.py  paginator.py  reporter.py  request_replayer.py  request_utils.py  template.py
src/sre_web_inspector/auth/: __init__.py  login_flow.py  login_result.py  session_checker.py  strategies.py
src/sre_web_inspector/collectors/: api_collector.py  grafana_collector.py
src/sre_web_inspector/network/: manager.py  middleware.py
sre_web_inspector/: __init__.py  config_schema.py  inspector.py  request_replayer.py  retry.py  route_modifier.py  run_context.py  template.py
sre_web_inspector/collectors/: table_collector.py
sre_web_inspector/network/: __init__.py  contexts.py  factory.py
tests/: conftest.py  test_api_capture.py  test_base_collector.py  test_cninfo_collector.py  test_config_schema.py  test_integration.py  test_lizhi_inspector.py  test_login_flow.py  test_page_generator.py  test_reporter.py  test_request_utils.py  test_retry.py  test_template.py
(+9 files in other folders)
